# dfki_har_backend

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial.py
app/: auth.py  config.py  db.py  main.py  models.py  schemas.py
app/routes/: sessions.py  users.py
tests/: conftest.py  test_auth.py  test_sessions_roundtrip.py
